tests/transpiler/x/scala/fun_expr_in_let.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/fun_expr_in_let.scala:4: error: value * is not a member of Any
        val square = ((x: Any) => (x * x))
                                     ^
one error found
