tests/transpiler/x/scala/fun_expr_in_let.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:11 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        val square = ((x: Any) => (x * x))
        println(square(6))
    }
}
